# bbb-clock

./: .gitignore  BB-BLANK-00A0.dts  CLAUDE.md  CONTEXT.md  HANDOFF-p1-default-blank.md  HANDOFF-verify-ribbon-fix.md  Makefile  README.org  TODO.md  brightness.pl  brightness_levels.txt  clock.c  p2stress.c  spi.c  start-clock.sh  testspi2.c
.claude/: settings.local.json.tmp.20996.7f16912ddbd5  settings.local.json.tmp.47622.104ae98e6a5f
blog/: p2-ribbon-crosstalk-scaffold.md
client-server-test/: client.c  server.c
deploy/systemd/: clock.service  ds1307-rtc.service  ds1307-writeback.service  ds1307-writeback.timer  leds-off.service  leds-off.timer  telemetry-service.service  tsl2561-daemon.service
deploy/tmpfiles.d/: bbb-clock.conf
displayon/: displayoff.sh  displayon  displayon.metainit  displayon.sh
docs/: diagnostic-plan.org
docs/adr/: 0001-default-blank-power-up.md  0002-p2-ribbon-crosstalk.md  0003-telemetry-service-and-run-clock.md
docs/agents/: device-build-deploy.md
docs/migration/: clock-packages-manual.txt  current-image-baseline.md  outcome.md  provisioning.md  (+1 more)
init/: clock.metainit
scripts/: backup-emmc.sh
startrtc/: rtc  rtc.metainit
telemetry-service/: .gitignore  README.md  pyproject.toml  telemetry.conf.example
telemetry-service/telemetry_service/: __init__.py  __main__.py  config.py  discovery.py  service.py  sources.py
telemetry-service/tests/: test_config.py  test_discovery.py  test_service.py  test_sources.py
test/: spi.c  testspi.py
tsl2561-daemon/: .gitignore  .gitmodules  Makefile  client.c  server.c  tsl2561-daemon.c
(+4 files in other folders)
